--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Caesar Cipher</title>
+    <title>Transparencia Activa</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root">
-      <h1>Hello world!</h1>
+      <h1>!Bienvenidos a Transparencia Activa!</h1>
+      <h2>Somos web page diseñada para brindar apoyo y asesoramiento, ante una situación de acoso laboral o "mobbing".</h2>
     </div>
     <script src="index.js" type="module"></script>
   </body>
