--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       <img src="IMG/VISIVILITY.png" id="eyeOpen2">
       <img src="IMG/CANDADOPEN.png" id="candadoOpen">
       <img src="IMG/MENSAJE.png" class="correo">
-      <img src="IMG/LOGO.png" alt="" class="logoAero">
+      <img src="IMG/LOGOEMPRESA.png" alt="" class="logoAero">
     
       <h1>!Bienvenidos a Transparencia Activa!</h1>
       <h2></h2>
