--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <img src="IMG/NOVISION.png" id="eyeClose">
       <img src="IMG/CANDADOCLOSE.png" id="candadoClose">
       <img src="IMG/MENSAJE.png" class="correo">
-      <img src="IMG/LOGOEMPRESA.png" alt="" class="logoAero">
+      <!--img src="IMG/LOGOEMPRESA.png" alt="" class="logoAero"-->
       <h1><b>!Bienvenidos a Transparencia Activa!</b></h1>
       <h2></h2>
       <p class="instruction" id="instruction">Somos una web page diseñada para brindar apoyo y asesoramiento, ante una situación de acoso laboral o "mobbing".</p>
@@ -50,7 +50,7 @@
       <img src="IMG/VISIVILITY.png" id="eyeOpen2">
       <img src="IMG/CANDADOPEN.png" id="candadoOpen">
       <img src="IMG/MENSAJE.png" class="correo">
-      <img src="IMG/LOGOEMPRESA.png" alt="" class="logoAero">
+      <!--img src="IMG/LOGOEMPRESA.png" alt="" class="logoAero"-->
     
       <h1>!Bienvenidos a Transparencia Activa!</h1>
       <h2></h2>
